fix spacing around links

--- a/Website/index.css
+++ b/Website/index.css
@@ -136,7 +136,7 @@ div.dropdown {
 /* Needed for sorting address page */
 li.on {display:none;}
 
-a.na{
+a.class{
   text-decoration: underline;
    color: #6D6C63;  
    margin: 0;
